--- a/templates/about.html
+++ b/templates/about.html
@@ -14,11 +14,11 @@
             <span class="text-white">About Us</span>
             <h1 class="text-capitalize mb-5 text-lg">About Us</h1>
 
-            <!--  <ul class="list-inline breadcumb-nav">
+            <!--   <ul class="list-inline breadcumb-nav">
             <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
             <li class="list-inline-item"><span class="text-white">/</span></li>
             <li class="list-inline-item"><a href="#" class="text-white-50">About Us</a></li>
-          </ul>  -->
+          </ul>   -->
           </div>
         </div>
       </div>
@@ -27,89 +27,98 @@
 
   <section class="section about-page">
     <div class="container">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-lg-4">
-          <h2 class="title-color">Personal care for your healthy living</h2>
+          <h2 class="title-color">Comprehensive Eye Care for a Clearer Vision</h2>
         </div>
         <div class="col-lg-8">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, quod laborum alias. Vitae dolorum, officia sit! Saepe ullam facere at, consequatur incidunt, quae esse, quis ut reprehenderit dignissimos, libero delectus.</p>
-          <img src="images/about/sign.png" alt="" class="img-fluid" />
+          <p>At our Eye Care Hospital, we are committed to providing world-class ophthalmic treatments with advanced technology and expert care. From routine eye check-ups to specialized surgeries, our team ensures precision and excellence in eye health services.</p>
+          <p>Our mission is to enhance your vision and improve your quality of life. Trust us with your eyesight, and let us help you see the world more clearly.</p>
+          <img src="static/images/about/eye-care-sign.png" alt="Doctor's Signature" class="img-fluid" />
         </div>
       </div>
     </div>
   </section>
 
-  <section class="fetaure-page">
+  <section class="feature-page">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item mb-5 mb-lg-0">
-            <img src="images/about/about-1.jpg" alt="" class="img-fluid w-100" />
-            <h4 class="mt-3">Healthcare for Kids</h4>
-            <p>Voluptate aperiam esse possimus maxime repellendus, nihil quod accusantium .</p>
+            <img src="static/images/eye-care/eye-care-1.jpg" alt="Comprehensive Eye Checkup" class="img-fluid w-100" />
+            <h4 class="mt-3">Comprehensive Eye Checkup</h4>
+            <p>Ensure your vision stays sharp with our thorough eye examinations and advanced diagnostics.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item mb-5 mb-lg-0">
-            <img src="images/about/about-2.jpg" alt="" class="img-fluid w-100" />
-            <h4 class="mt-3">Medical Counseling</h4>
-            <p>Voluptate aperiam esse possimus maxime repellendus, nihil quod accusantium .</p>
+            <img src="static/images/eye-care/eye-care-2.jpg" alt="Advanced Laser Treatment" class="img-fluid w-100" />
+            <h4 class="mt-3">Advanced Laser Treatment</h4>
+            <p>State-of-the-art laser treatments for cataracts, glaucoma, and vision correction procedures.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item mb-5 mb-lg-0">
-            <img src="images/about/about-3.jpg" alt="" class="img-fluid w-100" />
-            <h4 class="mt-3">Modern Equipments</h4>
-            <p>Voluptate aperiam esse possimus maxime repellendus, nihil quod accusantium .</p>
+            <img src="static/images/eye-care/eye-care-3.jpg" alt="Pediatric Eye Care" class="img-fluid w-100" />
+            <h4 class="mt-3">Pediatric Eye Care</h4>
+            <p>Specialized eye care services for children, ensuring healthy vision development.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item">
-            <img src="images/about/about-4.jpg" alt="" class="img-fluid w-100" />
-            <h4 class="mt-3">Qualified Doctors</h4>
-            <p>Voluptate aperiam esse possimus maxime repellendus, nihil quod accusantium .</p>
+            <img src="static/images/eye-care/eye-care-4.jpg" alt="Expert Ophthalmologists" class="img-fluid w-100" />
+            <h4 class="mt-3">Expert Ophthalmologists</h4>
+            <p>Our team of highly skilled eye specialists is dedicated to providing exceptional vision care.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <section class="section awards">
+
+  <section class="section awards bg-light">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-4">
-          <h2 class="title-color">Our Doctors achievements</h2>
+        <div class="col-lg-4 text-center text-lg-start">
+          <h2 class="title-color">Our Achievements in Eye Care</h2>
+          <p class="mt-3">Recognizing excellence in ophthalmology, patient care, and innovation.</p>
           <div class="divider mt-4 mb-5 mb-lg-0"></div>
         </div>
         <div class="col-lg-8">
-          <div class="row">
+          <div class="row g-4">
             <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="award-img">
-                <img src="images/about/3.png" alt="" class="img-fluid" />
+              <div class="award-img text-center">
+                <img src="static/images/awards/best_hospital.png" alt="Best Eye Hospital" class="img-fluid rounded shadow" />
+                <p class="mt-2">Best Eye Hospital 2024</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="award-img">
-                <img src="images/about/4.png" alt="" class="img-fluid" />
+              <div class="award-img text-center">
+                <img src="static/images/awards/innovation_award.png" alt="Innovation in Eye Care" class="img-fluid rounded shadow" />
+                <p class="mt-2">Innovation in Eye Care</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="award-img">
-                <img src="images/about/1.png" alt="" class="img-fluid" />
+              <div class="award-img text-center">
+                <img src="static/images/awards/surgeon_award.png" alt="Top Eye Surgeon" class="img-fluid rounded shadow" />
+                <p class="mt-2">Top Eye Surgeon Award</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="award-img">
-                <img src="images/about/2.png" alt="" class="img-fluid" />
+              <div class="award-img text-center">
+                <img src="static/images/awards/patient_care.png" alt="Excellence in Patient Care" class="img-fluid rounded shadow" />
+                <p class="mt-2">Excellence in Patient Care</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="award-img">
-                <img src="images/about/5.png" alt="" class="img-fluid" />
+              <div class="award-img text-center">
+                <img src="static/images/awards/vision_award.png" alt="Visionary Research Award" class="img-fluid rounded shadow" />
+                <p class="mt-2">Visionary Research Award</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="award-img">
-                <img src="images/about/6.png" alt="" class="img-fluid" />
+              <div class="award-img text-center">
+                <img src="static/images/awards/community_service.png" alt="Community Service Excellence" class="img-fluid rounded shadow" />
+                <p class="mt-2">Community Service Excellence</p>
               </div>
             </div>
           </div>
@@ -123,9 +132,9 @@
       <div class="row justify-content-center">
         <div class="col-lg-6">
           <div class="section-title text-center">
-            <h2 class="mb-4">Meet Our Specialist</h2>
+            <h2 class="mb-4">Meet Our Eye Specialists</h2>
             <div class="divider mx-auto my-4"></div>
-            <p>Today’s users expect effortless experiences. Don’t let essential people and processes stay stuck in the past. Speed it up, skip the hassles</p>
+            <p>Our team of expert ophthalmologists and eye care professionals is dedicated to providing advanced treatments for your vision needs.</p>
           </div>
         </div>
       </div>
@@ -133,43 +142,44 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="team-block mb-5 mb-lg-0">
-            <img src="images/team/1.jpg" alt="" class="img-fluid w-100" />
+            <img src="static/images/team/eye_specialist_1.jpg" alt="Dr. Emily Watson" class="img-fluid w-100" />
 
             <div class="content">
-              <h4 class="mt-4 mb-0"><a href="doctor-single.html">John Marshal</a></h4>
-              <p>Internist, Emergency Physician</p>
+              <h4 class="mt-4 mb-0"><a href="doctor-single.html">Dr. Emily Watson</a></h4>
+              <p>Senior Ophthalmologist</p>
             </div>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="team-block mb-5 mb-lg-0">
-            <img src="images/team/2.jpg" alt="" class="img-fluid w-100" />
+            <img src="static/images/team/eye_specialist_2.jpg" alt="Dr. Mark Robinson" class="img-fluid w-100" />
 
             <div class="content">
-              <h4 class="mt-4 mb-0"><a href="doctor-single.html">Marshal Root</a></h4>
-              <p>Surgeon, Сardiologist</p>
+              <h4 class="mt-4 mb-0"><a href="doctor-single.html">Dr. Mark Robinson</a></h4>
+              <p>Retina Specialist</p>
             </div>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="team-block mb-5 mb-lg-0">
-            <img src="images/team/3.jpg" alt="" class="img-fluid w-100" />
+            <img src="static/images/team/eye_specialist_3.jpg" alt="Dr. Sophia Allen" class="img-fluid w-100" />
 
             <div class="content">
-              <h4 class="mt-4 mb-0"><a href="doctor-single.html">Siamon john</a></h4>
-              <p>Internist, General Practitioner</p>
+              <h4 class="mt-4 mb-0"><a href="doctor-single.html">Dr. Sophia Allen</a></h4>
+              <p>Cornea & Refractive Surgeon</p>
             </div>
           </div>
         </div>
+
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="team-block">
-            <img src="images/team/4.jpg" alt="" class="img-fluid w-100" />
+            <img src="static/images/team/eye_specialist_4.jpg" alt="Dr. James Carter" class="img-fluid w-100" />
 
             <div class="content">
-              <h4 class="mt-4 mb-0"><a href="doctor-single.html">Rishat Ahmed</a></h4>
-              <p>Orthopedic Surgeon</p>
+              <h4 class="mt-4 mb-0"><a href="doctor-single.html">Dr. James Carter</a></h4>
+              <p>Glaucoma Specialist</p>
             </div>
           </div>
         </div>
@@ -182,7 +192,7 @@
       <div class="row">
         <div class="col-lg-6 offset-lg-6">
           <div class="section-title">
-            <h2 class="mb-4">What they say about us</h2>
+            <h2 class="mb-4">What Our Patients Say</h2>
             <div class="divider my-4"></div>
           </div>
         </div>
@@ -191,50 +201,50 @@
         <div class="col-lg-6 testimonial-wrap offset-lg-6">
           <div class="testimonial-block">
             <div class="client-info">
-              <h4>Amazing service!</h4>
-              <span>John Partho</span>
+              <h4>Exceptional Eye Care!</h4>
+              <span>Dr. Anita Sharma</span>
             </div>
-            <p>They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.</p>
+            <p>The team provided outstanding care during my LASIK surgery. The doctors were professional, and the latest technology ensured a smooth experience. Highly recommended!</p>
             <i class="icofont-quote-right"></i>
           </div>
 
           <div class="testimonial-block">
             <div class="client-info">
-              <h4>Expert doctors!</h4>
-              <span>Mullar Sarth</span>
+              <h4>Best Vision Treatment!</h4>
+              <span>Rahul Verma</span>
             </div>
-            <p>They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.</p>
+            <p>After years of struggling with blurry vision, the specialists here helped me with advanced cataract surgery. My eyesight has never been better!</p>
             <i class="icofont-quote-right"></i>
           </div>
 
           <div class="testimonial-block">
             <div class="client-info">
-              <h4>Good Support!</h4>
-              <span>Kolis Mullar</span>
+              <h4>Compassionate Staff!</h4>
+              <span>Neha Kapoor</span>
             </div>
-            <p>They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.</p>
+            <p>The staff was incredibly kind and supportive during my retina treatment. They answered all my questions and made me feel comfortable throughout the process.</p>
             <i class="icofont-quote-right"></i>
           </div>
 
           <div class="testimonial-block">
             <div class="client-info">
-              <h4>Nice Environment!</h4>
-              <span>Partho Sarothi</span>
+              <h4>State-of-the-Art Facilities!</h4>
+              <span>Vikram Choudhary</span>
             </div>
-            <p>They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.</p>
+            <p>I was impressed with the modern equipment and clean facilities. The hospital provides cutting-edge treatments for various eye conditions.</p>
             <i class="icofont-quote-right"></i>
           </div>
 
           <div class="testimonial-block">
             <div class="client-info">
-              <h4>Modern Service!</h4>
-              <span>Kolis Mullar</span>
+              <h4>Excellent Pediatric Eye Care!</h4>
+              <span>Pooja Mehta</span>
             </div>
-            <p>They provide great service facilty consectetur adipisicing elit. Itaque rem, praesentium, iure, ipsum magnam deleniti a vel eos adipisci suscipit fugit placeat. Quibusdam laboriosam eveniet nostrum nemo commodi numquam quod.</p>
+            <p>My child had an eye check-up here, and the pediatric ophthalmologists were very patient and friendly. It was a great experience for my little one.</p>
             <i class="icofont-quote-right"></i>
           </div>
         </div>
       </div>
-    </div>a
+    </div>
   </section>
 {% endblock %}
