--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,22 +30,22 @@
             <div class="col-lg-4 col-sm-6 col-md-6">
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-live-support"></i>
-                    <h5>Call Us</h5>
-                     +823-4565-13456
+                    <h5>Emergency Helpline</h5>
+                     +1-800-OPTICAL
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-support-faq"></i>
-                    <h5>Email Us</h5>
-                     contact@mail.com
+                    <h5>Email Support</h5>
+                     care@eyehospital.com
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-location-pin"></i>
-                    <h5>Location</h5>
-                     North Main Street,Brooklyn Australia
+                    <h5>Our Location</h5>
+                     123 Vision Street, New York, USA
                 </div>
             </div>
         </div>
@@ -57,16 +57,15 @@
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section-title text-center">
-                    <h2 class="text-md mb-2">Contact us</h2>
+                    <h2 class="text-md mb-2">Get in Touch</h2>
                     <div class="divider mx-auto my-4"></div>
-                    <p class="mb-5">Laboriosam exercitationem molestias beatae eos pariatur, similique, excepturi mollitia sit perferendis maiores ratione aliquam?</p>
+                    <p class="mb-5">Have questions about your eye health? Reach out to us for expert advice and consultations.</p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <form id="contact-form" class="contact__form " method="post" action="mail.php">
-                 <!-- form message -->
                     <div class="row">
                         <div class="col-12">
                             <div class="alert alert-success contact__msg" style="display: none" role="alert">
@@ -78,33 +77,33 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <input name="name" id="name" type="text" class="form-control" placeholder="Your Full Name" >
+                                <input name="name" id="name" type="text" class="form-control" placeholder="Patient's Full Name" required>
                             </div>
                         </div>
 
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <input name="email" id="email" type="email" class="form-control" placeholder="Your Email Address">
+                                <input name="email" id="email" type="email" class="form-control" placeholder="Your Email Address" required>
                             </div>
                         </div>
-                         <div class="col-lg-6">
+                        <div class="col-lg-6">
                             <div class="form-group">
-                                <input name="subject" id="subject" type="text" class="form-control" placeholder="Your Query Topic">
+                                <input name="subject" id="subject" type="text" class="form-control" placeholder="Reason for Inquiry" required>
                             </div>
                         </div>
-                         <div class="col-lg-6">
+                        <div class="col-lg-6">
                             <div class="form-group">
-                                <input name="phone" id="phone" type="text" class="form-control" placeholder="Your Phone Number">
+                                <input name="phone" id="phone" type="text" class="form-control" placeholder="Your Contact Number" required>
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group-2 mb-4">
-                        <textarea name="message" id="message" class="form-control" rows="8" placeholder="Your Message"></textarea>
+                        <textarea name="message" id="message" class="form-control" rows="8" placeholder="Describe Your Eye Concern or Request" required></textarea>
                     </div>
 
                     <div class="text-center">
-                        <input class="btn btn-main btn-round-full" name="submit" type="submit" value="Send Messege"></input>
+                        <input class="btn btn-main btn-round-full" name="submit" type="submit" value="Send Message"></input>
                     </div>
                 </form>
             </div>
@@ -112,8 +111,7 @@
     </div>
 </section>
 
-
- <div class="google-map ">
+<div class="google-map ">
     <div id="map"></div>
 </div>
 {% endblock %}
