--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Doctor | Karunya Eyecare
+  Doctors | Karunya Eye Care
 {% endblock %}
 
 {% block content %}
@@ -11,211 +11,90 @@
       <div class="row">
         <div class="col-md-12">
           <div class="block text-center">
-            <span class="text-white">All Doctors</span>
-            <h1 class="text-capitalize mb-5 text-lg">Specalized doctors</h1>
-
-            <!--  <ul class="list-inline breadcumb-nav">
-            <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
-            <li class="list-inline-item"><span class="text-white">/</span></li>
-            <li class="list-inline-item"><a href="#" class="text-white-50">All Doctors</a></li>
-          </ul>  -->
+            <span class="text-white">Our Specialists</span>
+            <h1 class="text-capitalize mb-5 text-lg">Expert Eye Care Doctors</h1>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- portfolio -->
   <section class="section doctors">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <div class="section-title">
-            <h2>Doctors</h2>
+            <h2>Meet Our Specialists</h2>
             <div class="divider mx-auto my-4"></div>
-            <p>We provide a wide range of creative services adipisicing elit. Autem maxime rem modi eaque, voluptate. Beatae officiis neque</p>
+            <p>Our dedicated team of ophthalmologists and eye specialists is here to provide exceptional vision care using the latest advancements in eye treatment.</p>
           </div>
         </div>
       </div>
 
       <div class="col-12 text-center mb-5">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <label class="btn active"><input type="radio" name="shuffle-filter" value="all" checked="checked" />All Department</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat1" />Cardiology</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat2" />Dental</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat3" />Neurology</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat4" />Medicine</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat5" />Pediatric</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat6" />Traumatology</label>
+          <label class="btn active"><input type="radio" name="shuffle-filter" value="all" checked="checked" />All Specialties</label>
+          <label class="btn"><input type="radio" name="shuffle-filter" value="cat1" />Cataract Surgery</label>
+          <label class="btn"><input type="radio" name="shuffle-filter" value="cat2" />Lasik Surgery</label>
+          <label class="btn"><input type="radio" name="shuffle-filter" value="cat3" />Retina Treatment</label>
+          <label class="btn"><input type="radio" name="shuffle-filter" value="cat4" />Glaucoma Care</label>
         </div>
       </div>
 
       <div class="row shuffle-wrapper portfolio-gallery">
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat1&quot;,&quot;cat2&quot;]">
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="images/team/1.jpg" alt="doctor-image" class="img-fluid w-100" />
+                <img src="static/images/team/1.jpg" alt="doctor-image" class="img-fluid w-100" />
               </div>
             </div>
             <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Thomas Henry</a></h4>
-              <p>Cardiology</p>
+              <h4 class="mb-0"><a href="doctor-single.html">Dr. Thomas Henry</a></h4>
+              <p>Cataract Specialist</p>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat2&quot;]">
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="images/team/2.jpg" alt="doctor-image" class="img-fluid w-100" />
+                <img src="static/images/team/2.jpg" alt="doctor-image" class="img-fluid w-100" />
               </div>
             </div>
             <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Harrision Samuel</a></h4>
-              <p>Radiology</p>
+              <h4 class="mb-0"><a href="doctor-single.html">Dr. Harrison Samuel</a></h4>
+              <p>Lasik Surgery Expert</p>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat3&quot;]">
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="images/team/3.jpg" alt="doctor-image" class="img-fluid w-100" />
+                <img src="static/images/team/3.jpg" alt="doctor-image" class="img-fluid w-100" />
               </div>
             </div>
             <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Alexandar James</a></h4>
-              <p>Dental</p>
+              <h4 class="mb-0"><a href="doctor-single.html">Dr. Alexander James</a></h4>
+              <p>Retina Specialist</p>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat3&quot;,&quot;cat4&quot;]">
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="images/team/4.jpg" alt="doctor-image" class="img-fluid w-100" />
+                <img src="static/images/team/4.jpg" alt="doctor-image" class="img-fluid w-100" />
               </div>
             </div>
             <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Edward john</a></h4>
-              <p>Pediatry</p>
+              <h4 class="mb-0"><a href="doctor-single.html">Dr. Edward John</a></h4>
+              <p>Glaucoma Expert</p>
             </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat5&quot;]">
-          <div class="position-relative doctor-inner-box">
-            <div class="doctor-profile">
-              <div class="doctor-img">
-                <img src="images/team/1.jpg" alt="doctor-image" class="img-fluid w-100" />
-              </div>
-            </div>
-            <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Thomas Henry</a></h4>
-              <p>Neurology</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat6&quot;]">
-          <div class="position-relative doctor-inner-box">
-            <div class="doctor-profile">
-              <div class="doctor-img">
-                <img src="images/team/3.jpg" alt="doctor-image" class="img-fluid w-100" />
-              </div>
-            </div>
-            <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Henry samuel</a></h4>
-              <p>Palmology</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat4&quot;]">
-          <div class="position-relative doctor-inner-box">
-            <div class="doctor-profile">
-              <div class="doctor-img">
-                <img src="images/team/1.jpg" alt="doctor-image" class="img-fluid w-100" />
-              </div>
-            </div>
-            <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Thomas alexandar</a></h4>
-              <p>Cardiology</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat5&quot;,&quot;cat6&quot;,&quot;cat1&quot;]">
-          <div class="position-relative doctor-inner-box">
-            <div class="doctor-profile">
-              <div class="doctor-img">
-                <img src="images/team/3.jpg" alt="doctor-image" class="img-fluid w-100" />
-              </div>
-            </div>
-            <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">HarissonThomas</a></h4>
-              <p>Traumatology</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item illustration" data-groups="[&quot;cat2&quot;]">
-          <div class="position-relative doctor-inner-box">
-            <div class="doctor-profile">
-              <div class="doctor-img">
-                <img src="images/team/4.jpg" alt="doctor-image" class="img-fluid w-100" />
-              </div>
-            </div>
-            <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Jonas Thomson</a></h4>
-              <p>Cardiology</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups="[&quot;cat5&quot;,&quot;cat6&quot;,&quot;cat1&quot;]">
-          <div class="position-relative doctor-inner-box">
-            <div class="doctor-profile">
-              <div class="doctor-img">
-                <img src="images/team/3.jpg" alt="doctor-image" class="img-fluid w-100" />
-              </div>
-            </div>
-            <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Henry Forth</a></h4>
-              <p>hematology</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item illustration" data-groups="[&quot;cat2&quot;]">
-          <div class="position-relative doctor-inner-box">
-            <div class="doctor-profile">
-              <div class="doctor-img">
-                <img src="images/team/4.jpg" alt="doctor-image" class="img-fluid w-100" />
-              </div>
-            </div>
-            <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">Thomas Henry</a></h4>
-              <p>Dental</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- /portfolio -->
-  <section class="section cta-page">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-7">
-          <div class="cta-content">
-            <div class="divider mb-4"></div>
-            <h2 class="mb-5 text-lg">We are pleased to offer you the <span class="title-color">chance to have the healthy</span></h2>
-            <a href="appoinment.html" class="btn btn-main-2 btn-round-full">Get appoinment<i class="icofont-simple-right ml-2"></i></a>
           </div>
         </div>
       </div>
